--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Orbitron&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+$steel-color-dark: -webkit-linear-gradient(325deg, #6e6e6e 10%, #414141 74%);
+$steel-color-light: -webkit-linear-gradient(90deg, #ababab 0%, #ebebeb 74%);
+
 * {
     margin: 0;
     padding: 0;
@@ -58,7 +62,7 @@ body {
         }
     }
 
-    .main-content-wrapper {
+    main {
         width: 100%;
         height: 100vh;
         background: #222;
@@ -67,283 +71,238 @@ body {
         justify-content: center;
         align-items: center;
 
-        .main-content {
-            position: relative;
-            background: #2d2f41;
-            // background: #d9d9d9;
-            // background: #222;
-            width: 600px;
-            height: 400px;
-            padding: 24px;
-            box-shadow: 0 5px 25px rgba(14, 21, 37, 0.8);
+        .main-content-wrapper {
+            background: $steel-color-light;
+            width: 620px;
+            height: 420px;
             border-radius: 18px;
-            border: 8px solid #fff;
+            box-shadow: 0 5px 25px rgba(14, 21, 37, 0.8);
 
             display: flex;
             justify-content: center;
             align-items: center;
 
-            .show-menu {
-                .dot-menu-btn {
-                    position: absolute;
-                    top: 0;
-                    right: 0;
-                    margin: 10px;
-                    // color: #e3e3e3;
-                    color: #fff;
-                    font-size: 1.5em;
-                    cursor: pointer;
-                }
-                .dot-menu.active {
-                    visibility: visible;
-                    opacity: 1;
-                }
-                .dot-menu {
-                    position: absolute;
-                    top: 7px;
-                    right: 5px;
-                    list-style: none;
-                    background: #353e54;
-                    padding: 10px 20px;
-                    border-radius: 5px;
-                    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.5);
-                    z-index: 999;
-                    transition: 0.3s ease-in-out;
-                    visibility: hidden;
-                    opacity: 0;
-
-                    .menu-item {
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-
-                        .clock-format-text {
-                            color: #efefef;
-                            font-size: 0.9em;
-                            margin-right: 20px;
-                        }
-
-                        .format-switch-btn {
-                            width: 35px;
-                            height: 15px;
-                            background: #485470;
-                            border-radius: 75px;
-                            box-shadow: inset 2px 2px 4px rgba(255, 255, 255, 0.1), inset 2px 2px 4px rgba(0, 0, 0, 0.2);
-                            cursor: pointer;
-
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                        }
-                        .format-switch-btn:before {
-                            content: "";
-                            position: absolute;
-                            width: 14px;
-                            height: 14px;
-                            background: #ff5e9a;
-                            border-radius: 50%;
-                            box-shadow: 0 5px 25px #ff5e9a;
-                            transform: translateX(-10px);
-                            transition: 0.3s ease-in-out;
-                            transition-property: background, transform;
-                        }
-                        .format-switch-btn.active:before {
-                            background: #0bff8d;
-                            box-shadow: 0 5px 25px #0bff8d;
-                            transform: translateX(10px);
-                        }
-                    }
-                }
-            }
-
-            .tittle-wrapper {
-                width: 100%;
-                color: #fff;
+            .main-content {
+                position: relative;
+                background: $steel-color-dark;
+                width: 600px;
+                height: 400px;
+                padding: 24px;
+                border-radius: 18px;
 
                 display: flex;
-                justify-content: left;
+                justify-content: center;
                 align-items: center;
 
-                .tittle {
-                    text-align: left;
-                    line-height: 1.4;
-
-                    .project-name,
-                    .tittle-name {
-                        color: #fff;
-                        // text-shadow: 0px 0px 10px #454545;
+                .show-menu {
+                    .dot-menu-btn {
+                        position: absolute;
+                        top: 0;
+                        right: 0;
+                        margin: 10px;
+                        // color: #fff;
+                        background: $steel-color-light;
+                        -webkit-text-fill-color: transparent;
+                        -webkit-background-clip: text;
+                        font-size: 1.5em;
+                        cursor: pointer;
                     }
-
-                    .project-name {
-                        span {
-                            font-size: 0.7em;
-                            font-weight: 300;
-                        }
+                    .dot-menu.active {
+                        visibility: visible;
+                        opacity: 1;
                     }
+                    .dot-menu {
+                        position: absolute;
+                        top: 7px;
+                        right: 5px;
+                        list-style: none;
+                        background: #222;
+                        padding: 10px 20px;
+                        border-radius: 5px;
+                        box-shadow: 0 5px 25px rgba(0, 0, 0, 0.5);
+                        z-index: 999;
+                        transition: 0.3s ease-in-out;
+                        visibility: hidden;
+                        opacity: 0;
 
-                    .tittle-name {
-                        h1 {
-                            font-size: 2em;
-                            font-weight: 600;
-                        }
-                        span {
-                            font-size: 1.2em;
-                            font-weight: 400;
+                        .menu-item {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+
+                            .clock-format-text {
+                                color: #efefef;
+                                font-size: 0.9em;
+                                margin-right: 20px;
+                            }
+
+                            .format-switch-btn {
+                                width: 35px;
+                                height: 15px;
+                                background: #485470;
+                                border-radius: 75px;
+                                box-shadow: inset 2px 2px 4px rgba(255, 255, 255, 0.1), inset 2px 2px 4px rgba(0, 0, 0, 0.2);
+                                cursor: pointer;
+
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                            }
+                            .format-switch-btn:before {
+                                content: "";
+                                position: absolute;
+                                width: 14px;
+                                height: 14px;
+                                background: #ff5e9a;
+                                border-radius: 50%;
+                                box-shadow: 0 5px 25px #ff5e9a;
+                                transform: translateX(-10px);
+                                transition: 0.3s ease-in-out;
+                                transition-property: background, transform;
+                            }
+                            .format-switch-btn.active:before {
+                                background: #0bff8d;
+                                box-shadow: 0 5px 25px #0bff8d;
+                                transform: translateX(10px);
+                            }
                         }
                     }
                 }
-            }
 
-            .digital-clock-wrapper {
-                .digital-clock:before {
-                    content: "";
-                    position: absolute;
-                    // background: linear-gradient(45deg, #24ff6d, #2f93f1, #ff5e9a);
-                    // background-size: 200% 200%;
-                    top: -5px;
-                    left: -5px;
-                    right: -5px;
-                    bottom: -5px;
-                    border-radius: 8px;
-                    z-index: -1;
-                    filter: blur(40px);
-                    animation: glowing 10s ease-in-out infinite;
-                }
-
-                @keyframes glowing {
-                    0% {
-                        background-position: 0 50%;
-                    }
-                    50% {
-                        background-position: 100% 50%;
-                    }
-                    100% {
-                        background-position: 0 50%;
-                    }
-                }
-
-                .digital-clock {
-                    position: relative;
+                .tittle-wrapper {
+                    width: 100%;
                     color: #fff;
-                    // background: #2d2f41;
-                    // background: #b9b9b9;
-                    background: #353e54;
-                    width: 520px;
-                    padding: 20px 45px;
-                    margin-top: 30px;
-                    margin-bottom: 12px;
-                    // box-shadow: 0 5px 25px rgba(14, 21, 37, 0.8);
-                    border-radius: 10px;
-                    border: 1px solid #fff;
 
                     display: flex;
-                    justify-content: center;
+                    justify-content: left;
                     align-items: center;
-                    flex-direction: column;
 
-                    .time {
-                        color: #fff;
+                    .tittle {
+                        text-align: left;
+                        line-height: 1.4;
+
+                        .project-name,
+                        .tittle-name {
+                            color: #fff;
+                        }
+
+                        .project-name {
+                            span {
+                                font-size: 0.7em;
+                                font-weight: 300;
+                            }
+                        }
+
+                        .tittle-name {
+                            h1 {
+                                font-size: 2em;
+                                font-weight: 600;
+                            }
+                            span {
+                                font-size: 1.2em;
+                                font-weight: 400;
+                            }
+                        }
+                    }
+                }
+
+                .clock-wrapper {
+                    .clock {
                         position: relative;
+                        color: #fff;
+                        background: $steel-color-dark;
+                        width: 520px;
+                        padding: 20px 45px;
+                        margin-top: 30px;
+                        margin-bottom: 12px;
+                        border-radius: 10px;
+                        border: 1px solid #fff;
+
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        flex-direction: column;
+
+                        .time {
+                            color: #fff;
+                            position: relative;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+
+                            .hours,
+                            .dots,
+                            .minutes {
+                                padding: 0 10px;
+                                font-weight: 600;
+                                font-family: "Orbitron", sans-serif;
+                                // text-shadow: 0px 0px 3px #fff;
+
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                            }
+
+                            .hours,
+                            .minutes {
+                                font-size: 6.5em;
+                                background: $steel-color-light;
+                                -webkit-text-fill-color: transparent;
+                                -webkit-background-clip: text;
+                            }
+
+                            .dots {
+                                font-size: 5em;
+                            }
+
+                            .right-side {
+                                position: relative;
+                                color: #fff;
+                                margin-left: 10px;
+                                height: 90px;
+
+                                display: flex;
+                                justify-content: flex-end;
+                                align-items: center;
+                                flex-direction: column;
+
+                                .period,
+                                .seconds {
+                                    background: $steel-color-light;
+                                    -webkit-text-fill-color: transparent;
+                                    -webkit-background-clip: text;
+                                    font-family: "Orbitron", sans-serif;
+                                    font-size: 1.2em;
+                                    font-weight: 600;
+                                }
+                            }
+                        }
+                    }
+
+                    .calender {
+                        color: #fff;
+                        font-size: 1.3em;
+                        font-weight: 500;
+                        margin-bottom: 5px;
+
                         display: flex;
                         justify-content: center;
                         align-items: center;
 
-                        .hours,
-                        .dots,
-                        .minutes {
-                            // color: #2d2f41;
-                            padding: 0 10px;
-                            font-weight: 600;
+                        .day-name,
+                        .day-number,
+                        .year {
+                            margin-left: 8px;
+                        }
+
+                        .month-name,
+                        .day-name,
+                        .day-number {
+                            background: $steel-color-light;
+                            -webkit-text-fill-color: transparent;
+                            -webkit-background-clip: text;
                             font-family: "Orbitron", sans-serif;
-                            // line-height: 125px; // 면적
-
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
                         }
-
-                        .hours,
-                        .minutes {
-                            font-size: 6.5em;
-                            width: 180px; // 면적
-                        }
-
-                        .hours {
-                            // background: -webkit-linear-gradient(90deg, #634dff, #5fd4ff);
-                            // -webkit-text-fill-color: transparent;
-                            // -webkit-background-clip: text;
-                        }
-
-                        .dots {
-                            font-size: 5em;
-                        }
-
-                        .minutes {
-                            // background: -webkit-linear-gradient(90deg, #ff5e9a, #ffb960);
-                            // -webkit-text-fill-color: transparent;
-                            // -webkit-background-clip: text;
-                        }
-
-                        .right-side {
-                            color: #fff;
-                            position: relative;
-                            margin-left: 10px;
-
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                            flex-direction: column;
-
-                            .period,
-                            .seconds {
-                                font-family: "Orbitron", sans-serif;
-                                font-size: 1.2em;
-                                font-weight: 500;
-                            }
-
-                            .period {
-                                // background: -webkit-linear-gradient(90deg, #f7b63f, #faf879);
-                                // -webkit-text-fill-color: transparent;
-                                // -webkit-background-clip: text;
-
-                                transform: translateY(-20px);
-                            }
-                            .seconds {
-                                // background: -webkit-linear-gradient(90deg, #24ff6d, #2f93f1);
-                                // -webkit-text-fill-color: transparent;
-                                // -webkit-background-clip: text;
-
-                                transform: translateY(16px);
-                            }
-                        }
-                    }
-                }
-
-                .calender {
-                    // background: -webkit-linear-gradient(90deg, #ae4af6, #ff98d1);
-                    // -webkit-text-fill-color: transparent;
-                    // -webkit-background-clip: text;
-
-                    // color: #2d2f41;
-                    color: #fff;
-                    font-size: 1.3em;
-                    font-weight: 500;
-                    margin-bottom: 5px;
-
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-
-                    .day-name,
-                    .day-number,
-                    .year {
-                        margin-left: 8px;
-                    }
-
-                    .month-name,
-                    .day-name,
-                    .day-number {
-                        font-family: "Orbitron", sans-serif;
                     }
                 }
             }
