--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Orbitron&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-$steel-color-dark: -webkit-linear-gradient(325deg, #6e6e6e 10%, #414141 74%);
+$steel-color-dark: -webkit-linear-gradient(325deg, #ababab 0%, #5e5e5e 50%, #414141 100%);
 $steel-color-light: -webkit-linear-gradient(90deg, #ababab 0%, #ebebeb 74%);
 
 * {
@@ -210,7 +210,8 @@ body {
                     .clock {
                         position: relative;
                         color: #fff;
-                        background: $steel-color-dark;
+                        // background: $steel-color-dark;
+                        background: transparent;
                         width: 520px;
                         padding: 20px 45px;
                         margin-top: 30px;
