--- a/digital_clock.scss
+++ b/digital_clock.scss
@@ -12,10 +12,10 @@ $steel-color-light: -webkit-linear-gradient(90deg, #ababab 0%, #ebebeb 74%);
 }
 
 body {
-    position: relative;
     background: #fff;
     width: 100%;
     height: 100%;
+    position: relative;
 
     .max-width {
         max-width: 1280px;
@@ -23,17 +23,20 @@ body {
     }
 
     .nav-wrapper {
-        position: fixed;
-        top: 0;
         background: #111111;
         color: #fff;
         width: 100%;
         height: 60px;
         filter: drop-shadow(0 -5px 10px rgb(170, 170, 170));
 
+        position: fixed;
+        top: 0;
+        z-index: 999;
+
         .nav {
             width: 100%;
             height: 100%;
+
             display: flex;
             justify-content: left;
             align-items: center;
@@ -46,42 +49,51 @@ body {
     }
 
     main {
-        width: 100%;
-        height: 100vh;
-        background: #222;
+        .content-BG {
+            background: #222;
+            width: 100%;
+            height: 100vh;
 
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        .main-content-wrapper {
-            background: $steel-color-light;
-            width: 620px;
-            height: 420px;
-            border-radius: 18px;
-            box-shadow: 0 5px 25px rgba(14, 21, 37, 0.8);
-
+            position: relative;
             display: flex;
             justify-content: center;
             align-items: center;
+            z-index: 888;
 
-            .main-content {
-                position: relative;
+            .digital-clock::before {
+                content: "";
+                background: $steel-color-light;
+                width: 620px;
+                height: 420px;
+                border-radius: 18px;
+                box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.3);
+
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                z-index: -1;
+            }
+
+            .digital-clock {
                 background: $steel-color-dark;
                 width: 600px;
                 height: 400px;
-                padding: 24px;
+                padding: 24px 60px;
                 border-radius: 18px;
 
+                position: relative;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                flex-direction: column;
 
-                .show-menu {
+                .menu-box {
+                    position: absolute;
+                    top: 10px;
+                    right: 10px;
+
                     .dot-menu-btn {
-                        position: absolute;
-                        top: 0;
-                        right: 0;
                         margin: 10px;
                         background: $steel-color-light;
                         -webkit-text-fill-color: transparent;
@@ -94,18 +106,20 @@ body {
                         opacity: 1;
                     }
                     .dot-menu {
-                        position: absolute;
-                        top: 7px;
-                        right: 5px;
-                        list-style: none;
+                        // background: $steel-color-dark;
                         background: #222;
                         padding: 10px 20px;
-                        border-radius: 5px;
+                        border-radius: 12px;
                         box-shadow: 0 5px 25px rgba(0, 0, 0, 0.5);
-                        z-index: 999;
+
+                        position: absolute;
+                        top: 10px;
+                        right: 10px;
                         transition: 0.3s ease-in-out;
                         visibility: hidden;
                         opacity: 0;
+                        list-style: none;
+                        z-index: 999;
 
                         .menu-item {
                             display: flex;
@@ -113,47 +127,52 @@ body {
                             align-items: center;
 
                             .clock-format-text {
-                                color: #efefef;
+                                color: #fff;
                                 font-size: 0.9em;
                                 margin-right: 20px;
                             }
 
                             .format-switch-btn {
-                                width: 35px;
-                                height: 15px;
-                                background: #485470;
+                                background: $steel-color-light;
+                                width: 54px;
+                                height: 14px;
                                 border-radius: 75px;
                                 box-shadow: inset 2px 2px 4px rgba(255, 255, 255, 0.1), inset 2px 2px 4px rgba(0, 0, 0, 0.2);
-                                cursor: pointer;
 
+                                position: relative;
                                 display: flex;
                                 justify-content: center;
                                 align-items: center;
+                                cursor: pointer;
                             }
                             .format-switch-btn:before {
                                 content: "";
-                                position: absolute;
-                                width: 14px;
-                                height: 14px;
                                 background: #ff5e9a;
+                                width: 12px;
+                                height: 12px;
                                 border-radius: 50%;
                                 box-shadow: 0 5px 25px #ff5e9a;
-                                transform: translateX(-10px);
+
+                                position: absolute;
+                                top: 50%;
+                                transform: translate(-11px, -50%);
                                 transition: 0.3s ease-in-out;
                                 transition-property: background, transform;
                             }
+
                             .format-switch-btn.active:before {
                                 background: #0bff8d;
                                 box-shadow: 0 5px 25px #0bff8d;
-                                transform: translateX(10px);
+                                transform: translate(11px, -50%);
                             }
                         }
                     }
                 }
 
-                .tittle-wrapper {
-                    width: 100%;
+                .tittle-container {
+                    background: transparent;
                     color: #fff;
+                    width: 100%;
 
                     display: flex;
                     justify-content: left;
@@ -163,127 +182,128 @@ body {
                         text-align: left;
                         line-height: 1.4;
 
-                        .project-name,
-                        .tittle-name {
+                        h2 {
+                            font-size: 2.2em;
+                            font-weight: 600;
+                        }
+
+                        span {
+                            font-size: 0.8em;
+                            font-weight: 300;
+                        }
+
+                        p {
+                            font-size: 1.2em;
+                            font-weight: 400;
+                        }
+                    }
+                }
+
+                .clock {
+                    background: transparent;
+                    color: #fff;
+                    width: 100%;
+                    padding: 20px 45px;
+                    margin-top: 30px;
+                    margin-bottom: 12px;
+                    border-radius: 10px;
+                    border: 1px solid #fff;
+
+                    position: relative;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: column;
+
+                    .time {
+                        color: #fff;
+
+                        position: relative;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+
+                        .hours,
+                        .dots,
+                        .minutes {
+                            padding: 0 10px;
+                            font-weight: 600;
+                            font-family: "Orbitron", sans-serif;
+
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                        }
+
+                        .hours,
+                        .minutes,
+                        .dots {
+                            background: $steel-color-light;
+                            -webkit-text-fill-color: transparent;
+                            -webkit-background-clip: text;
+                        }
+
+                        .hours,
+                        .minutes {
+                            font-size: 6em;
+                        }
+
+                        .dots {
+                            font-size: 5em;
+                            margin-bottom: 12px;
+                        }
+
+                        .right-side {
                             color: #fff;
-                        }
+                            // margin-left: 10px;
+                            margin: 0 0 3px 12px;
+                            height: 90px;
 
-                        .project-name {
-                            span {
-                                font-size: 0.7em;
-                                font-weight: 300;
-                            }
-                        }
+                            position: relative;
+                            display: flex;
+                            // justify-content: flex-end;
+                            justify-content: center;
+                            align-items: center;
+                            flex-direction: column;
 
-                        .tittle-name {
-                            h1 {
-                                font-size: 2em;
-                                font-weight: 600;
-                            }
-                            span {
+                            .period,
+                            .seconds {
+                                background: $steel-color-light;
+                                -webkit-text-fill-color: transparent;
+                                -webkit-background-clip: text;
+                                font-family: "Orbitron", sans-serif;
                                 font-size: 1.2em;
-                                font-weight: 400;
+                                font-weight: 600;
+                                letter-spacing: 1px;
                             }
                         }
                     }
                 }
 
-                .clock-wrapper {
-                    .clock {
-                        position: relative;
-                        color: #fff;
-                        background: transparent;
-                        width: 520px;
-                        padding: 20px 45px;
-                        margin-top: 30px;
-                        margin-bottom: 12px;
-                        border-radius: 10px;
-                        border: 1px solid #fff;
+                .calender {
+                    font-size: 1.2em;
+                    font-weight: 600;
+                    letter-spacing: 1px;
+                    margin-bottom: 5px;
 
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        flex-direction: column;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
 
-                        .time {
-                            color: #fff;
-                            position: relative;
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-
-                            .hours,
-                            .dots,
-                            .minutes {
-                                padding: 0 10px;
-                                font-weight: 600;
-                                font-family: "Orbitron", sans-serif;
-
-                                display: flex;
-                                justify-content: center;
-                                align-items: center;
-                            }
-
-                            .hours,
-                            .minutes {
-                                font-size: 6.5em;
-                                background: $steel-color-light;
-                                -webkit-text-fill-color: transparent;
-                                -webkit-background-clip: text;
-                            }
-
-                            .dots {
-                                font-size: 5em;
-                            }
-
-                            .right-side {
-                                position: relative;
-                                color: #fff;
-                                margin-left: 10px;
-                                height: 90px;
-
-                                display: flex;
-                                justify-content: flex-end;
-                                align-items: center;
-                                flex-direction: column;
-
-                                .period,
-                                .seconds {
-                                    background: $steel-color-light;
-                                    -webkit-text-fill-color: transparent;
-                                    -webkit-background-clip: text;
-                                    font-family: "Orbitron", sans-serif;
-                                    font-size: 1.2em;
-                                    font-weight: 600;
-                                }
-                            }
-                        }
+                    .day-name,
+                    .day-number,
+                    .years {
+                        margin-left: 12px;
                     }
 
-                    .calender {
-                        color: #fff;
-                        font-size: 1.3em;
-                        font-weight: 500;
-                        margin-bottom: 5px;
-
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-
-                        .day-name,
-                        .day-number,
-                        .year {
-                            margin-left: 8px;
-                        }
-
-                        .month-name,
-                        .day-name,
-                        .day-number {
-                            background: $steel-color-light;
-                            -webkit-text-fill-color: transparent;
-                            -webkit-background-clip: text;
-                            font-family: "Orbitron", sans-serif;
-                        }
+                    .month-name,
+                    .day-name,
+                    .day-number,
+                    .years {
+                        background: $steel-color-light;
+                        -webkit-text-fill-color: transparent;
+                        -webkit-background-clip: text;
+                        font-family: "Orbitron", sans-serif;
                     }
                 }
             }
