--- a/digital_clock.css
+++ b/digital_clock.css
@@ -52,7 +52,7 @@ body .nav-wrapper .nav .logo {
 }
 
 body main .content-BG {
-  background: #222;
+  background: #333;
   width: 100%;
   height: 100vh;
   position: relative;
@@ -74,8 +74,8 @@ body main .content-BG .digital-clock::before {
   width: 620px;
   height: 420px;
   border-radius: 18px;
-  -webkit-box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.3);
-          box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 25px 35px 15px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 25px 35px 15px rgba(0, 0, 0, 0.2);
   position: absolute;
   top: 50%;
   left: 50%;
