--- a/digital_clock.scss
+++ b/digital_clock.scss
@@ -50,7 +50,7 @@ body {
 
     main {
         .content-BG {
-            background: #222;
+            background: #333;
             width: 100%;
             height: 100vh;
 
@@ -66,7 +66,7 @@ body {
                 width: 620px;
                 height: 420px;
                 border-radius: 18px;
-                box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.3);
+                box-shadow: 0px 25px 35px 15px rgba(0, 0, 0, 0.2);
 
                 position: absolute;
                 top: 50%;
