--- a/digital_clock.scss
+++ b/digital_clock.scss
@@ -65,6 +65,7 @@ body {
                 background: $steel-color-light;
                 width: 620px;
                 height: 420px;
+                border: 1px solid #fff;
                 border-radius: 18px;
                 box-shadow: 0px 25px 35px 15px rgba(0, 0, 0, 0.2);
 
