--- a/digital_clock.scss
+++ b/digital_clock.scss
@@ -1,8 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Orbitron&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-$steel-color-dark: -webkit-linear-gradient(325deg, #ababab 0%, #5e5e5e 50%, #414141 100%);
-$steel-color-light: -webkit-linear-gradient(90deg, #ababab 0%, #ebebeb 74%);
+$steel-color-dark: -webkit-linear-gradient(
+    -45deg,
+    rgba(160, 160, 160, 1) 0%,
+    rgba(110, 110, 110, 1) 60%,
+    rgba(75, 75, 75, 1) 100%
+);
+$steel-color-light: -webkit-linear-gradient(90deg, rgba(180, 180, 180, 1) 0%, rgba(240, 240, 240, 1) 74%);
 
 * {
     margin: 0;
@@ -65,9 +70,10 @@ body {
                 background: $steel-color-light;
                 width: 620px;
                 height: 420px;
-                border: 1px solid #fff;
+
                 border-radius: 18px;
-                box-shadow: 0px 25px 35px 15px rgba(0, 0, 0, 0.2);
+                box-shadow: 1px 1px 1px 0 rgba(255, 255, 255, 0.9), 20px 25px 20px -5px rgba(0, 0, 0, 0.6),
+                    20px 20px 30px 5px rgba(150, 150, 150, 0.2), 20px 30px 30px 10px rgba(0, 0, 0, 0.2);
 
                 position: absolute;
                 top: 50%;
@@ -107,7 +113,6 @@ body {
                         opacity: 1;
                     }
                     .dot-menu {
-                        // background: $steel-color-dark;
                         background: #222;
                         padding: 10px 20px;
                         border-radius: 12px;
@@ -138,7 +143,8 @@ body {
                                 width: 54px;
                                 height: 14px;
                                 border-radius: 75px;
-                                box-shadow: inset 2px 2px 4px rgba(255, 255, 255, 0.1), inset 2px 2px 4px rgba(0, 0, 0, 0.2);
+                                box-shadow: inset 2px 2px 4px rgba(255, 255, 255, 0.1),
+                                    inset 2px 2px 4px rgba(0, 0, 0, 0.2);
 
                                 position: relative;
                                 display: flex;
